# farter-mono

./: .gitignore  README-barter-data.md  README-barter-integration.md  README-barter.md
barter-data-rs/: .gitignore  Cargo.toml  README.md
barter-data-rs/examples/: multi_stream_multi_exchange.rs  order_books_l1_streams.rs  order_books_l1_streams_multi_exchange.rs
